fixed alignment for level color indicator on lessons tabs

--- a/app/assets/stylesheets/application/lessons.scss
+++ b/app/assets/stylesheets/application/lessons.scss
@@ -168,7 +168,7 @@
         height: 0.5rem;
         width: 0.5rem;
         @include breakpoint(medium) {
-          top: 1rem;
+          top: .75rem;
           right: 1rem;
           height: 1rem;
           width: 1rem;
